Fixed mobile bar z-index

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -123,6 +123,7 @@ textarea:focus, input:focus{
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    z-index: 10;
 }
 
 a {
